--- a/static_tourism_website/index.html
+++ b/static_tourism_website/index.html
@@ -3,9 +3,16 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Tourism Website</title>
+    <link rel="stylesheet" href="index.css" />
   </head>
   <body>
-    <h1>Aditya</h1>
+    <div class="bg-contianer">
+      <div class="card-container">
+        <h1 class="main-heading">Tourism</h1>
+        <p class="description">Plan you Trip</p>
+        <button class="button">Get Started</button>
+      </div>
+    </div>
   </body>
 </html>
