--- a/Todo_Application/index.html
+++ b/Todo_Application/index.html
@@ -35,8 +35,12 @@
             <h1 class="create-task-heading">
               Create <span class="create-task-heading-subpart">Task</span>
             </h1>
-            <input type="text" id="todoUserInput" class="todo-user-input" />
-            <button class="add-todo-button">Add</button>
+            <input
+              type="text"
+              id="todoUserInput"
+              class="todo-user-input"
+              placeholder="What need to be Done?" />
+            <button class="add-todo-button" id="addTodoButton">Add</button>
             <h1 class="todo-items-heading">
               My <span class="todo-items-heading-subpart">Tasks</span>
             </h1>
