Make review movie page using js, css, html

--- a/Todo_Application/index.html
+++ b/Todo_Application/index.html
@@ -64,6 +64,15 @@
         </div>
       </div>
     </div>
+    <textarea rows="12" cols="68" id="message">
+        Lorem ipsum dolor sit amet,
+       consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
+       Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+        Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint 
+        occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+    </textarea>
+    <br />
+    <button class="btn btn-primary mt-1" id="saveButton">Save</button>
 
     <!-- External JS File  -->
     <script src="script.js"></script>
